Primeira leitura, emendas, capítulo 10

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -2397,13 +2397,13 @@ sem olhos, sem dentes, sem paladar, sem nada.\footnote{Shakespeare,
 Neste momento, pensando na \emph{juventude}, eu brado: terra à
     vista! Terra à vista! Satisfeito e mais que satisfeito desta viagem
     emotiva, exploradora e errante em direção a mares estranhos e
-    sombrios! Finalmente agora surge uma costa: para saber como ela é
+    sombrios! Finalmente, agora surge uma costa: para saber como ela é,
     preciso nela aportar, e o pior porto de emergência é melhor do que
     voltar a balançar na infinitude desesperançada e cética. Paremos
     primeiro em terra; depois encontraremos os bons portos e
     facilitaremos a chegada dos que virão.
 
-    Esta viagem foi perigosa e emocionante. Quão distantes estamos do
+    Essa viagem foi perigosa e emocionante. Quão distantes estamos do
     olhar tranquilo com que de início víamos nosso navio navegar.
     Presumindo os perigos da história, encontramo-nos fortemente unidos;
     nós mesmos trazemos à luz os rastros daqueles sofrimentos que, em
@@ -2449,13 +2449,13 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     todo povo de cultura verdadeira: que a cultura só pode medrar e
     florescer a partir da vida; enquanto ela é, entre os alemães,
     plantada como uma flor de papel ou regada com açúcar, e por isso
-    sempre deve sempre permanecer como mendaz e estéril. A educação da
+    deve sempre permanecer como mendaz e estéril. A educação da
     juventude alemã, contudo, parte desse conceito falso e estéril de
     cultura: seu objetivo, pensado de forma pura e elevada, não é o
     homem culto e livre, mas o erudito, o homem científico e ainda o
     mais precoce homem científico possível, que se afasta da vida para
     conhecer de forma certa e precisa; seu resultado, vendo de forma
-    justa, empírica e comum, é o filisteu da cultura histórico-estético,
+    justa, empírica e comum, é o filisteu da cultura histórico-estética,
     que tagarela, esperto e novidadeiro, sobre o Estado, a Igreja e
     arte, o sensor de milhares de sensações, o estômago insaciável, mas
     que não sabe o que é uma fome e uma sede justas. Que são inaturais
@@ -2467,7 +2467,7 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     pronunciar, esse deve iluminar, com a claridade dos conceitos, a
     recusa que lhes é inconsciente, tornando-a consciente a uma
     consciência que fala alto. Como pode ele alcançar esse inusitado
-    objetivo? --
+    objetivo?
 
     Sobretudo destruindo uma superstição, a crença na \emph{necessidade}
     daquela forma de educação. Porém, pensa-se que não haveria outra
@@ -2490,13 +2490,13 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     possível sumarizar em si as mais altas e mais marcantes experiências
     das épocas antigas, justamente as maiores épocas. É o mesmo método
     absurdo que conduz nossos jovens artistas plásticos a museus e
-    galerias, e não ao ateliê de um mestre e sobretudo ao ateliê da
+    galerias, e não ao ateliê de um mestre e, sobretudo, ao ateliê da
     mestra única, a natureza. Como se se pudesse prever, como um
     passeante fugidio, na história das coisas passadas, seus pendores e
     artes, seu produto vital! Como se a própria vida não fosse um
     ofício, que se aprende profunda e firmemente, e que se exerce com
     labor, quando não impede que incompetentes e falastrões saiam do
-    ovo! --
+    ovo!
 
     Platão considerava necessário que a primeira geração de sua nova
     sociedade (no Estado perfeito) fosse educada com a ajuda de uma
@@ -2505,21 +2505,21 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     terra, onde foram prensadas e conformadas pelo artesão-mestre da
     natureza. Impossível se rebelar contra esse passado! Impossível se
     contrapor à obra dos deuses. Isso deve valer como uma cláusula
-    pétrea da natureza: quem nasceu como filósofo tem ouro em seu corpo,
-    como guardião, apenas prata, como artesão, ferro e bronze. Como não
+    pétrea da natureza: quem nasceu como filósofo tem ouro em seu corpo;
+    como guardião, apenas prata; como artesão, ferro e bronze. Como não
     é possível misturar esses metais, esclarece Platão, não deve ser
     possível alterar e trocar a ordem das castas; a crença nessa
     \emph{aeterna veritas} {[}verdade eterna{]} é o fundamento da nova
     educação e portanto do novo Estado. -- Assim também o alemão moderno
     acredita na \emph{aeterna veritas} de sua educação: e contudo essa
     crença ruirá, como ruiria o Estado platônico, quando a essa mentira
-    necessária se opuser uma \emph{verdade necessária} \footnote{Jogo de
+    necessária se opuser uma \emph{verdade necessária}\footnote{Jogo de
       palavras entre \emph{Notlüge} (uma mentira que procura acalentar
       ou prevenir do pior, em uma situação de emergência) com o que
       seria seu antônimo, o neologismo \emph{Notwahrheit}.}: que o
     alemão não possui cultura alguma, porque ele, graças a sua educação,
     não pode ter cultura alguma. Ele quer a flor sem caule e raiz:
-    portanto a quer em vão. Esta é a simples verdade, uma justa verdade
+    portanto a quer em vão. Essa é a simples verdade, uma justa verdade
     necessária, desagradável e áspera.
 
     Mas é com essa verdade necessária que \emph{nossa primeira geração}
@@ -2583,7 +2583,7 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     falaria de venenos -- veria naquela força, nesses poderes, poderes e
     forças adversários; pois ela considera verdadeiro e correto apenas a
     reflexão objetiva, portanto a reflexão científica, que vê em todo
-    lugar algo que veio a ser, algo histórico e em nenhum lugar um ser,
+    lugar algo que veio a ser, algo histórico, e em nenhum lugar um ser,
     algo eterno; ela vive do mesmo modo em uma contradição eterna contra
     os poderes perpetuadores da arte e da religião, como se ela odiasse
     o esquecimento, a morte do conhecimento, como se ela procurasse
@@ -2641,7 +2641,7 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     eles, surpresos com os próprios olhos, vejam que as tigelas estão
     cheias, e que agressões, exigências, impulsos vitais, paixões estão
     empacotados e espremidos nessas generalidades, que não poderiam
-    ficar por muito tempo cobertos. Volto-me por fim a esses céticos da
+    ficar por muito tempo cobertos. Volto-me, por fim, a esses céticos da
     época que mostra tudo à luz, em direção daquela sociedade de
     esperançosos, para lhes contar, por meio de símbolos, o passo e o
     percurso de sua cura, sua salvação da doença histórica, e com isso
@@ -2679,17 +2679,17 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     helênica não era um aglomerado, graças àquela sentença apolínea. Os
     gregos aprenderam aos poucos a \emph{organizar o caos} ao se
     voltarem, segundo o ensinamento délfico, a refletir sobre si, isto
-    é, sobre suas necessidades autênticas e deixar perecer as
+    é, sobre suas necessidades autênticas, e deixar perecer as
     necessidades ilusórias. Assim eles tornaram a se apoderar de si; não
     permaneciam mais herdeiros e epígonos saturados de todo o Oriente;
-    ele se tornaram, pela luta laboriosa consigo mesmos, através da
+    eles se tornaram, pela luta laboriosa consigo mesmos, através da
     prática da interpretação daquela sentença, os continuadores e
     multiplicadores do tesouro herdado e modelos e primogênitos de toda
     cultura futura do povo.
 
     Essa é uma alegoria para cada um de nós: deve-se organizar o caos
     que se tem em si, tornando a refletir sobre suas maiores
-    necessidades. Sua honestidade, seu caráter corajoso e veraz deve em
+    necessidades. Sua honestidade, seu caráter corajoso e veraz, deve em
     algum momento se posicionar contra o fato de se tornar sempre algo
     repetido, reaprendido, imitado; começa-se então a compreender que a
     cultura pode ser algo diferente de uma \emph{decoração da vida},
@@ -2706,5 +2706,3 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     veracidade puder prejudicar seriamente, em uma oportunidade, a
     cultura em voga, ela poderá ajudar a levar à queda toda uma cultura
     decorativa.
-  \end{enumerate}
-\end{enumerate}
