Algumas correções pós-PDF

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -353,13 +353,13 @@ junto com Giacomo Leopardi:
 
 \begin{quote}
 \begin{verse}
-Nada que vive
-é digno de tua aflição, e a Terra, nem um suspiro
-merece.
-Dor e tédio é nosso ser, e o mundo
-é um lodo -- e nada mais.
-Assossega-te.''\footnote{Nietzsche cita um trecho do poema ``A se
-  stresso'' (Para si mesmo).}
+Nada que vive\\
+é digno de tua aflição, e nem um suspiro\\
+a Terra merece.\\
+Dor e tédio é nosso ser, e o mundo\\
+é um lodo -- e nada mais.\\
+Assossega-te.\footnote{Nietzsche cita um trecho do poema ``A se
+  stesso'' (Para si mesmo).}
 \end{verse}
 \end{quote}
 
@@ -1532,7 +1532,7 @@ heróis. Com uma centena de homens educados dessa maneira antimoderna,
 isto é, maduros e habituados ao heroico, pode-se calar toda a cultura
 baixa e barulhenta desta época.
 
-\chapter{Capítulo 7 BLBLL}\label{capuxedtulo-7}
+\chapter{Capítulo 7}\label{capuxedtulo-7}
 
 O sentido histórico, quando reina \emph{de forma incontrolada} e extrai
 todas as suas consequências, extingue o futuro, pois destrói as ilusões
@@ -2338,17 +2338,18 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     madura, como eles ``veem toda a paixão de sua vida pregressa
     irromper desordenadamente e compreendem a vaidade dos supostos fins
     de então''. Não, corresponde a uma era humana daquele egoísmo
-    cultivado historicamente e batid, uma era senil, de uma ambição de
+    cultivado historicamente e batido, uma era senil, de uma ambição de
     vida repugnante e indigna e, assim, o último ato, que 
 
-    \begin{quote}
-    \begin{verse}
-    encerra a estranha história agitada,
-em uma segunda infância e total esquecimento
+ \begin{quote}
+ \begin{verse}
+encerra a estranha história agitada,\\
+em uma segunda infância e total esquecimento\\
 sem olhos, sem dentes, sem paladar, sem nada.\footnote{Shakespeare,
   \emph{Como gostais}, Ato 2, Cena 7.}
-  \end{quote}
-  \end{verse}
+ \end{verse}
+ \end{quote}
+  
 
   Quer os perigos de nossa vida e nossa cultura provenham desses velhos
   devastados, desdentados e sem paladar ou dos daqueles chamados
