Incluindo "page references" na Introdução

--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -80,7 +80,7 @@ de forma imprevista e surpreendente.
 O título \emph{Sobre a utilidade e desvantagem da história para a vida},
 se bem interpretado, já nos oferece muitas pistas sobre o tema e o
 objetivo do livro. Nietzsche procura realizar um estudo sobre o
-historicismo, nas inflexões que delhe são contemporâneas (particularmente
+historicismo, nas inflexões que lhe são contemporâneas (particularmente
 o hegelianismo e o positivismo), mas, e isso é o fundamental,
 identificando nessas escolas antes de tudo uma exacerbação de uma
 faculdade propriamente humana, o sentido histórico, ou seja, a
@@ -152,7 +152,7 @@ histórico, conduz a uma perturbadora indiferença para com o passado.
 Para os homens supra-históricos, ``o passado e o presente são uma e
 mesma coisa, ou seja, em toda multiplicidade, são tipicamente iguais e,
 como uma onipresença de tipos perpétuos, são uma imagem paralisada de
-valor invariável e de significado eternamente idêntico'' (p.). Enquanto
+valor invariável e de significado eternamente idêntico'' (p.\,\pageref{eternamenteidentico}). Enquanto
 o aistórico é como uma névoa envolvente e obscura que permite que o
 homem seja parcial e por isso se arrisque na ação, e o histórico é o
 portador da esperança num futuro, o ponto de vista supra-histórico,
@@ -231,7 +231,7 @@ preocupante da ira e da violência atávicas que ele quer negar: ``Pois lá
 onde somos resultado de gerações anteriores, somos também resultado de
 seus desvios, paixões, erros e até mesmo crimes; não é possível se
 livrar dessa cadeia. Se condenarmos aqueles desvios e nos tomarmos como
-libertos deles, isso não elimina o fato de que deles descendemos'' (p.).
+libertos deles, isso não elimina o fato de que deles descendemos'' (p.\,\pageref{delesdescendemos}).
 Com isso a história crítica se revela, também, como uma forma de
 falsificar o passado.
 
@@ -278,7 +278,7 @@ caso do homem moderno, isso resulta na inflação da interioridade,
 levando a um descompasso entre o interior e o exterior, entre forma e
 conteúdo, que é fatal para a vida. Para quem já tinha definido a
 cultura, na primeira extemporânea, ``como unidade do estilo artístico em
-todas as expressões vitais de um povo'' (p.), essa multiplicidade
+todas as expressões vitais de um povo'' (p.\,\pageref{vitaisdeumpovo}), essa multiplicidade
 desagregada provocada pelo excesso de história só poderia conduzir a uma
 cultura artificial. E entre os povos modernos, para Nietzsche o alemão é
 o que mais tem uma interioridade exacerbada, com prejuízo do sentido da
