--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -339,7 +339,7 @@ considerações históricas do passado, eles chegam ao total consenso nesta
 sentença: o passado e o presente são uma e mesma coisa, ou seja, em toda
 multiplicidade, são tipicamente iguais e, como uma onipresença de tipos
 perpétuos, são uma imagem paralisada de valor invariável e de
-significado eternamente idêntico. Como às centenas de diferentes línguas
+significado eternamente idêntico.\label{eternamenteidentico} Como às centenas de diferentes línguas
 correspondem as mesmas necessidades típicas dos homens, de tal modo que
 quem entendesse essas necessidades nada de novo aprenderia de todas
 essas línguas: assim o homem supra-histórico explica todas as histórias
@@ -773,7 +773,7 @@ perigosos. Pois lá onde somos resultado de gerações anteriores, somos
 também resultado de seus desvios, paixões, erros e até mesmo crimes; não
 é possível se livrar dessa cadeia. Se condenarmos aqueles desvios e nos
 tomarmos como libertos deles, isso não elimina o fato de que deles
-descendemos. No melhor caso, reduzimos isso a uma disputa entre a
+descendemos.\label{delesdescendemos} No melhor caso, reduzimos isso a uma disputa entre a
 natureza herdada e atávica e nosso conhecimento, ou bem a uma luta de um
 novo e duro disciplinamento contra um antigo, impregnado e inato;
 plantamos um novo hábito, um novo instinto, uma segunda natureza que
@@ -905,7 +905,7 @@ tornará uma primeira.
     vez designada -- com algum direito, como penso -- como unidade do
     estilo artístico em todas as expressões vitais de um povo\footnote{Nietzsche
       refere-se aqui a sua formulação de cultura presente na primeira
-      extemporânea, \emph{David Strauss, o devoto e o escritor}.}; essa
+      extemporânea, \emph{David Strauss, o devoto e o escritor}.};\label{vitaisdeumpovo} essa
     designação não deve ser mal-entendida como se tratasse de uma
     oposição entre barbárie e \emph{belo} estilo; o povo a que se
     prescreve uma cultura deve ser, em toda efetividade, apenas uma
