Mais uma "page reference"

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -41,7 +41,7 @@ vil. É apenas na medida em que a história serve à vida que queremos a
 ela servir; mas existe um grau, no exercício e na valorização da história,
 em que a vida fenece e se degenera: um fenômeno que experimentamos
 agora, tão necessário quanto doloroso possa ser, como um estranho
-sintoma de nossa época.
+sintoma de nossa época.\label{sintomadenossaepoca}
 
 Esforcei-me em descrever uma sensação que me torturava com frequência;
 vingo-me dela tornando-a pública. Talvez essa descrição leve alguém a me
