--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -127,7 +127,7 @@ primeiros capítulos do livro.
 
 O primeiro capítulo inicia-se com uma referência a um poema de Giacomo
 Leopardi (``Canto noturno de um pastor da Ásia''): ao observar os
-animais o homem descobre que é incapaz de ter a felicidade deles, pois
+animais, o homem descobre que é incapaz de ter a felicidade deles, pois
 esta repousa na inaptidão que eles têm de ter consciência do passado,
 enquanto o homem não consegue se desvencilhar de suas memórias. A
 história, assim, aparece como um fundamento antropológico, mas também
@@ -135,7 +135,7 @@ como causa de miséria e sofrimento humanos. Incapaz de viver
 aistoricamente como o animal, o homem tem de saber refrear o seu sentido
 histórico, assim como possuir um grau de uma força plástica capaz de
 absorver o passado e transformar sua matéria num impulso vital, a fim de
-intervir no presente e edificar um futuro. O histórico e os aistórico
+intervir no presente e edificar um futuro. O histórico e o aistórico
 são, nesse sentido, duas possibilidades fundamentais da relação humana
 com a história. Para a história servir à vida é necessário que haja um
 equilíbrio entre o caráter histórico da memória e o caráter aistórico do
@@ -201,7 +201,7 @@ mínimos detalhes, de tal modo que sempre que as estrelas estiverem numa
 certa posição em relação às outras um estoico e um epicurista se aliarão
 e assassinarão César e, num outro arranjo, Colombo novamente descobrirá
 a América (...). Provavelmente isso não acontecerá até que os astrônomos
-voltarem a ser astrólogos''.
+voltem a ser astrólogos''.
 
 No caso da história antiquária, o respeito ao passado representa uma
 conduta nobre, em contraposição a uma época que exalta o novo e despreza
@@ -296,7 +296,7 @@ braçal do que um instrumento da cultura, tratará seu material como um
 entre tantos outros. O trabalho intelectual, assim, torna-se uma
 atividade meramente burocrática e pouco inventiva. Nietzsche, ecoando a
 crítica de Schopenhauer à filosofia universitária, lamenta que isso
-ocorra mesmo com essa disciplina, quando ele se torna apenas
+ocorra mesmo com essa disciplina, quando ela se torna apenas
 historiografia: ``Em que condições inaturais, artificiais e em todo caso
 indignas se encontra, em uma época que padece da cultura geral, a mais
 veraz de todas as ciências, a honesta e nua deusa filosofia! Ela
@@ -311,7 +311,7 @@ estoicismo''.
 
 Ao mesmo tempo, o homem moderno, com sua cultura histórica, por ter
 passado os olhos pelas mais diversas eras e acumulado conhecimento sobre
-elas tem a ilusão de por isso ser mais justo do que os homens de épocas
+elas, tem a ilusão de por isso ser mais justo do que os homens de épocas
 anteriores. Essa suposta justiça, no entanto, tem seus critérios de
 avaliação questionados por Nietzsche. O homem moderno, diz ele, acaba
 por adequar e julgar o passado a partir dos seus próprios valores
