--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -30,7 +30,7 @@ que expressam um resoluto \emph{ceterum censeo}\footnote{Palavras com
 desvalor da história. Nela se mostra por que o ensinamento sem vivência,
 por que o saber que entorpece a ação, por que a história como fútil
 excesso de conhecimento e luxo devem, nas palavras de Goethe, ser odiados
--- porque ainda nos falta o mais necessário, e porque o supérfluo é
+-- porque ainda nos falta o mais necessário, e porque o supérfluob é
 inimigo do necessário. É certo que precisamos da história, mas de
 maneira diferente do que dela precisa o ocioso mimado no jardim do
 saber, que pode nobremente olhar com desdém para nossas toscas
