--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -707,7 +707,7 @@ narizes empinados e os risos mordazes, mas neles encontravam um gosto
 refinado. Quando o sentido de um povo se enrijece, quando a história
 serve assim a uma vida passada, de tal forma que sepulta a continuação
 da vida e justamente a vida superior, quando o sentido histórico não
-mais conserva mas mumifica: desse modo a árvore morre de uma forma
+mais conserva, mas mumifica: desse modo a árvore morre de uma forma
 antinatural, de cima para baixo, gradualmente -- e, por fim, a própria
 raiz fenece. A história antiquária degenera no mesmo instante em que o
 frescor da vida atual não mais anima e entusiasma. Agora, a piedade se
@@ -981,7 +981,7 @@ tornará uma primeira.
     dia. Shakespeare nos fez, nós modernos, apodrecer''.
 
     Esse é um caso singular, significativo, talvez muito rapidamente
-    generalizável: mas como seria terrível sua legítima generalização,
+    generalizável: mas como seria terrível sua legítima generalização
     se os casos singulares não devessem, frequentemente, fazer o
     observador perceber quão desesperada soa a frase: nós, alemães,
     sentimos com abstração; fomos todos arruinados pela história -- uma
