--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -1178,7 +1178,7 @@ fortes; ela extingue completamente as fracas}. Nisso repousa o fato de
 que ela confunde o sentimento e a sensação naqueles que não são fortes o
 suficiente para medir em si mesmos o passado. Aquele que não mais ousa
 confiar em si, mas que involuntariamente recorre à história, pedindo-lhe
-conselho para seu sentir: ``como devo sentir?'' Torna-se
+conselho para seu sentir: ``como devo sentir?'', torna-se
 paulatinamente, por medo, um ator que representa um papel, na maioria
 das vezes muitos papéis, todos mal e superficialmente. Aos poucos se
 perde totalmente a coerência entre o homem e sua esfera histórica; vemos
@@ -1320,7 +1320,7 @@ aquela delicadeza e suscetibilidade da sensação de que nada humano lhe é
 distante: as épocas e pessoas mais diversas ecoam, em sua lira, em tons
 harmoniosos; ele se tornou um passivo ressonador que ecoa, que com seu
 eco provoca outros passivos similares, até que esses ecos vibrantes,
-delicados e harmoniosos preenchem confusamente o ar de uma época. Mas me
+delicados e harmoniosos preencham confusamente o ar de uma época. Mas me
 parece que se escutam apenas os harmônicos mais agudos da sonoridade
 histórica original: não se pode mais adivinhar, a partir do som agudo e
 estridente das cordas, a força e o poder do original. O tom original
@@ -1416,7 +1416,7 @@ absurdo: ``não é um fato inquestionável que toda ação e impulso humanos
 são submetidos ao silencioso e nem sempre percebido, mas violento e
 ininterrupto curso das coisas?'' Em tal frase se percebe tanto uma
 verdade enigmática quanto uma inverdade patente; como o dito do
-jardineiro goethiano: ``a natureza se deixar forçar, mas não a se
+jardineiro goethiano: ``a natureza se deixa forçar, mas não se
 coagir''\footnote{Carta de Goethe a Schiller, de 21/02/1798.}, ou na
 inscrição de uma barraca de quermesse, contada por Swift: ``Aqui se
 encontra, com exceção de si mesmo, o maior elefante do mundo''. Qual é,
@@ -1514,7 +1514,7 @@ e vasto, explica-se pelo fato de que seus sacerdotes eram conhecedores
 acurados do passado; agora não convém saber que apenas aquele que
 constrói o futuro tem o direito de julgar o passado. Vejam adiante,
 imponham-se um grande objetivo e domem ao mesmo tempo aquele impulso
-analítico exagerado que desertifica o presente e impossibilitara toda
+analítico exagerado que desertifica o presente e impossibilita toda
 tranquilidade, todo crescimento pacífico e amadurecimento. Puxem para si
 a cerca de uma esperança grande e abrangente de um impulso esperançoso.
 Formem em si uma imagem que deva corresponder ao futuro e esqueçam a
