--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -2422,7 +2422,7 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     protesto; aliás se pode, dada a vetustez da juventude atual, quase
     não ser jovem o suficiente para perceber contra quem se protesta
     aqui. Como auxílio, tomarei um exemplo. Na Alemanha, há menos que um
-    século surgiu em alguns jovens o instinto natural para aquilo que se
+    século, surgiu em alguns jovens o instinto natural para aquilo que se
     chama poesia. Pensam que as gerações anteriores, naquela época, nada
     falaram daquela arte, para eles internamente estranha e inatural?
     Sabe-se do contrário: que elas refletiram, escreveram, discutiram
