Correções do tradutor Introdução

--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -21,7 +21,7 @@ que são exaltadas, a segunda ganha elogiosas, mas parcas linhas: ``A
 \emph{segunda} extemporânea traz à luz o que há de perigoso, corrosivo e
 envenenador da vida na nossa forma de prática científica --: a vida
 \emph{doente} dessa engrenagem e mecanismo desumanos, da
-`\emph{im}pessoalidade'' do trabalhador, da falsa economia da `divisão
+`\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão
 do trabalho'. Perde-se o fim, a cultura: -- o meio, a moderna prática
 científica, \emph{barbariza}... Nesse tratado o `sentido histórico', do
 qual nosso século se orgulha, foi pela primeira vez reconhecido como
@@ -118,7 +118,7 @@ cultura: ``É apenas na medida em que a história serve à vida que
 queremos a ela servir; mas existe um grau no exercício e na valorização
 da história em que a vida fenece e se degenera: um fenômeno que
 experimentamos agora, tão necessário quanto doloroso possa ser, como um
-estranho sintoma de nossa época'' (p.). Essa desmedida de estudos
+estranho sintoma de nossa época'' (p.\,\pageref{sintomadenossaepoca}). Essa desmedida de estudos
 históricos representa, segundo Nietzsche, aquela espécie de conhecimento
 que Goethe consideraria digna de ódio, por não conduzir à ação. Por
 outro lado, o reconhecimento de um serviço da história para a vida
@@ -176,7 +176,7 @@ corresponde ao homem reverente ao passado, que cultiva uma relação de
 respeito e satisfação com a história de sua nação e de seus
 antepassados; a crítica, enfim, corresponde ao homem que quer se
 libertar dos grilhões da tradição, negando o passado. Assim como para
-cada tipo de história existem traços de caráter que lhe convém, terá ela
+cada tipo de história existem traços de caráter que lhe convém, terá cada tipo
 também suas vantagens e desvantagens para a vida.
 
 A vantagem da história monumental consiste no fato de que ela leva o
@@ -207,7 +207,7 @@ No caso da história antiquária, o respeito ao passado representa uma
 conduta nobre, em contraposição a uma época que exalta o novo e despreza
 o antigo, como é a Modernidade. O historiador antiquário também
 fortalece os laços de união entre o indivíduo e sua nação. Satisfeito
-consigo mesmo e seu passado, ele não busca modelos no estrangeiro,
+consigo mesmo e com seu passado, ele não busca modelos no estrangeiro,
 valorizando e preservando suas tradições. A desvantagem da história
 antiquária revela-se no seu exagero de reverência ao passado. Esta pode
 tornar-se uma veneração indiscriminada por tudo que é pretérito, sem
@@ -221,7 +221,7 @@ transformando-se num fantasma do passado e num ``coveiro do presente''.
 
 Por fim, a vantagem da história crítica é não ser subserviente ao
 passado de maneira alguma, o que ocorre, em graus distintos, com a
-história monumental e a história crítica. O passado, para o historiador
+história monumental e a história antiquária. O passado, para o historiador
 crítico, ao contrário, deve ser condenado e destruído, a fim de que se
 possa dele se libertar. A história mostra apenas a injustiça humana, e
 por isso o homem crítico precisa ser injusto com o próprio passado. Mas
@@ -247,7 +247,7 @@ possível, portanto, uma objetividade histórica: onde a vida viceja, uma
 dose de criação e injustiça é necessária. O sonho positivista de uma
 história como ciência objetiva e neutra não é apenas uma ilusão e um
 erro, é também um desserviço à própria vida. O historiador, seja ele
-monumental, antiquário ou crítico não é um expectador imparcial do
+monumental, antiquário ou crítico, não é um espectador imparcial do
 passado; seu conhecimento já é uma perspectiva que recorta os eventos
 pretéritos de acordo com seu caráter, pendor e desejo. E a não ser que
 se tenha o sonho positivista, para Nietzsche não se deve lamentar essa
@@ -273,8 +273,7 @@ uma ciência positiva, ocupando-se apenas de acumular os dados os mais
 variados. Essa identificação entre ``cultura'' e ``cultura histórica''
 seria estranha para um grego antigo, um povo que soube preservar o
 aistórico em sua vida. O homem moderno, assim, torna-se um repositório
-de informações dispersas, sem lhes imprimir uma forma ou direção. No
-caso do homem moderno, isso resulta na inflação da interioridade,
+de informações dispersas, sem lhes imprimir uma forma ou direção. Isso resulta na inflação da interioridade,
 levando a um descompasso entre o interior e o exterior, entre forma e
 conteúdo, que é fatal para a vida. Para quem já tinha definido a
 cultura, na primeira extemporânea, ``como unidade do estilo artístico em
@@ -295,9 +294,8 @@ relação com a vida, então o pesquisador, tornado mais um trabalhador
 braçal do que um instrumento da cultura, tratará seu material como um
 entre tantos outros. O trabalho intelectual, assim, torna-se uma
 atividade meramente burocrática e pouco inventiva. Nietzsche, ecoando a
-crítica de Schopenhauer à filosofia universitária, lamenta que isso
-ocorra mesmo com essa disciplina, quando ela se torna apenas
-historiografia: ``Em que condições inaturais, artificiais e em todo caso
+crítica de Schopenhauer, lamenta a redução da filosofia a mera historiografia: 
+``Em que condições inaturais, artificiais e em todo caso
 indignas se encontra, em uma época que padece da cultura geral, a mais
 veraz de todas as ciências, a honesta e nua deusa filosofia! Ela
 permanece, naquele mundo de uniformidade superficial e forçada, como um
@@ -307,7 +305,7 @@ velhotes acadêmicos. Ninguém pode ousar seguir, em si, as leis da
 filosofia, ninguém vive filosoficamente, com aquela hombridade singela
 que um antigo exigia de alguém que se comportasse estoicamente, onde
 quer que fosse ou o que fizesse, caso já tivesse jurado lealdade ao
-estoicismo''.
+estoicismo'' (p.\,\pageref{lealdadeaoestoicismo}).
 
 Ao mesmo tempo, o homem moderno, com sua cultura histórica, por ter
 passado os olhos pelas mais diversas eras e acumulado conhecimento sobre
@@ -353,7 +351,8 @@ Hegel, Nietzsche ironiza sua concepção da história como teleologia,
 assim como sua pretensão de encontrar na história leis necessárias e o
 progresso do espírito, numa \emph{boutade} célebre: ``para Hegel, o
 ápice e o fim último do processo universal coincidem em sua própria
-existência berlinense''. No caso de Hartmann, seu contemporâneo, o
+existência berlinense'' (p.\,\pageref{existenciaberlinense}). 
+No caso de Hartmann, seu contemporâneo, o
 tratamento é mais extenso e ainda mais corrosivo.
 
 O comentador Anthony Jensen faz o seguinte resumo da filosofia de
@@ -380,7 +379,7 @@ compreender como o fim último da existência a mediocridade cultural e
 que não vê a história como o resultado da ação humana individual.
 (Hartmann teve oportunidade de se vingar posteriormente, em 1891 e em
 1898, quando Nietzsche já não estava consciente, negando-lhe maior
-significado na filosofia e acusando-o ainda de plagiário de Stirner).
+significado na filosofia e acusando-o de plagiário de Stirner).
 
 No último capítulo, enfim, em contraposição a essa época senil,
 Nietzsche faz uma exortação à juventude, como esperança para a tão
@@ -403,7 +402,7 @@ caos de formas e conceitos estrangeiros (...): semelhante a como hoje a
 estrangeira, de toda época anterior. (...) Os gregos aprenderam aos
 poucos a \emph{organizar o caos} ao se voltarem, segundo o ensinamento
 délfico, a refletir sobre si, isto é, sobre suas necessidades autênticas
-e deixar perecer as necessidades ilusórias''.
+e deixar perecer as necessidades ilusórias'' (p.\,\pageref{necessidadesilusorias}).
 
 Como se vê, Nietzsche abarca, nesta breve \emph{Consideração
 extemporânea}, um grande número de temas e preocupações, cujo núcleo é a
