--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -1131,7 +1131,7 @@ segredo de alcova ou conversinha frívola entre criançolas e velhotes
 acadêmicos. Ninguém pode ousar seguir, em si, as leis da filosofia,
 ninguém vive filosoficamente, com aquela hombridade singela que um
 antigo exigia de alguém que se comportasse estoicamente, onde quer que
-fosse ou o que fizesse, caso já tivesse jurado lealdade ao estoicismo.
+fosse ou o que fizesse, caso já tivesse jurado lealdade ao estoicismo.\label{lealdadeaoestoicismo}
 Todo o filosofar moderno é político e policial, limitado à aparência
 erudita por governos, igrejas, academias, costumes e covardias humanas:
 ele permanece num suspiro ``Mas se'' ou num conhecimento ``Era uma
@@ -1917,7 +1917,7 @@ se tornou, no interior da cabeça hegeliana, transparente e
 compreensível, superando todos os estádios dialéticos possíveis de seu
 devir, até sua autorrevelação: de sorte que, para Hegel, o ápice e o fim
 último do processo universal coincidem em sua própria existência
-berlinense. Aliás, ele deveria dizer que todas as coisas que viriam
+berlinense. \label{existenciaberlinense} Aliás, ele deveria dizer que todas as coisas que viriam
 depois dele deveriam ser avaliadas como uma coda musical do rondó da
 história universal ou, de forma mais apropriada, como supérfluas. Isso
 ele não disse: ele plantou nas gerações por ele fermentadas a admiração
@@ -2681,7 +2681,7 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     gregos aprenderam aos poucos a \emph{organizar o caos} ao se
     voltarem, segundo o ensinamento délfico, a refletir sobre si, isto
     é, sobre suas necessidades autênticas, e deixar perecer as
-    necessidades ilusórias. Assim eles tornaram a se apoderar de si; não
+    necessidades ilusórias.\label{necessidadesilusorias} Assim eles tornaram a se apoderar de si; não
     permaneciam mais herdeiros e epígonos saturados de todo o Oriente;
     eles se tornaram, pela luta laboriosa consigo mesmos, através da
     prática da interpretação daquela sentença, os continuadores e
