--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -62,14 +62,14 @@ Extemporânea é esta consideração também porque nela procuro compreender
 a cultura histórica, da qual nossa época, com razão, se orgulha, como
 infortúnio, privação e carência; porque eu, além disso, acredito que
 todos nós padecemos de uma febre histórica devastadora e devemos, ao
-menos, reconhecer que dela padecemos. Mas, como Goethe afirmou, com
-razão, com nossas virtudes construímos ao mesmo tempo nossos erros,
-e, como se sabe, uma virtude hipertrofiada -- como o sentido histórico
+menos, reconhecer que dela padecemos. Mas, se Goethe tinha razão em dizer que
+com nossas virtudes construímos ao mesmo tempo nossos erros,
+e se, como todos sabem, uma virtude hipertrofiada -- como o sentido histórico
 de nossa época parece ser -- pode corromper um povo tanto quanto um
 vício hipertrofiado. Então, deixem que eu me manifeste. Para meu alívio,
 também não devo esconder que cheguei por mim mesmo às experiências que
 me provocavam aquela sensação torturante, só recorrendo a outros para
-efeito de comparação, é que eu, somente na medida em que sou pupilo de
+efeito de comparação; e que eu, somente na medida em que sou pupilo de
 uma época mais antiga, ou seja, da grega, posso vir a ter, como um filho
 da época atual, experiências tão extemporâneas. Para tanto, permito-me
 confessar, até pela minha profissão de filólogo clássico: não saberia
@@ -100,12 +100,12 @@ silencia, e o homem se espanta.\footnote{Passagem inspirada no poema
   animal,/ No descanso, na indolência,/ Tem alegria, enquanto eu me
   enfastio/ Assim que descanso?''. Tradução baseada na alemã de
   Robert Hamerling (\emph{Leopardi's Gedichte}. Hildburghausen, 1866),
-  versão que, como mostrou Otto Friedrich Bollonow, Nietzsche
-  provavelmente conheceu (``Nietzsche und Leopardi''. \emph{Zeitschrift
+  versão que, como mostrou Otto Friedrich Bollonow, Nietz\-sche
+  provavelmente conheceu (``Nietz\-sche und Leopardi''. \emph{Zeitschrift
   für philosophische Forschung} (26), 1972).}
 
 No entanto, ele se espanta consigo mesmo, por não poder aprender a
-esquecer e por sempre estar pendurado no passado, por mais distante e
+esquecer e por sempre estar pendurado no passado: por mais distante e
 rápido que possa correr, com ele corre um grilhão. É um milagre: o
 instante, deslizando aqui e acolá, um nada antes e um nada depois,
 retorna como um fantasma e tira a paz de um instante posterior.
@@ -135,7 +135,7 @@ esquecimento. Então aprende a entender a palavra ``era'', aquela senha
 que, junto com a luta, a dor e o fastio, leva o homem a se lembrar do
 que, no fundo, é sua existência -- um imperfectivo que nunca se
 perfaz\footnote{Em alemão: \emph{ein nie zu vollendendes Imperfectum}.
-  Traduzimos por imperfectivo para explicitar que Nietzsche faz uso aqui
+  Traduzimos por imperfectivo para explicitar que Nietz\-sche faz uso aqui
   de um termo gramatical, referente aos tempos dos verbos que expressam
   ações passadas inacabadas.}. Quando a morte enfim traz o seu ansiado
 esquecimento, rouba também o presente e a existência, selando com
@@ -256,7 +256,7 @@ anti-histórica -- o útero não apenas do ato injusto, mas, ao contrário,
 de todo ato justo; e nenhum artista alcançará sua obra, nenhum general,
 sua vitória, nenhum povo, sua liberdade, sem antes ter querido e ansiado
 tal estado aistórico. Assim como todo homem de ação, segundo as palavras
-de Goethe, é inescrupuloso\footnote{Nietzsche se refere ao seguinte
+de Goethe, é inescrupuloso\footnote{Nietz\-sche se refere ao seguinte
   aforismo de Goethe: ``O homem de ação (\emph{Handelnde}) é sempre
   inescrupuloso; ninguém possui mais consciência que o homem
   contemplativo (\emph{Betrachtende})'' (Maximen und Reflexionen.
@@ -277,7 +277,7 @@ grandioso surge, esse alguém poderia talvez, enquanto um ser que
 conhece, elevar-se a um ponto de vista \emph{supra-histórico}, tal como
 o descreveu Niebuhr\footnote{Barthold G. Niebuhr (1776-1831),
   historiador prussiano. Até o momento não se identificou a fonte da
-  citação que Nietzsche faz a seguir.}, como resultado possível da
+  citação que Nietz\-sche faz a seguir.}, como resultado possível da
 consideração histórica. Diz ele, ``Entendida de maneira clara e precisa,
 a história é útil ao menos para uma coisa: para que se saiba como também
 os maiores e superiores espíritos da espécie humana não sabem quão
@@ -306,7 +306,7 @@ sobre os quais David Hume comentou com ironia:
 \emph{What the first sprightly running could not give.}\\
 {[}E, do que sobrou no copo da vida, esperam tomar\\
 Aquilo que o primeiro gole de vigor não pôde dar.{]}\footnote{Segundo
-  Walter Kaufmann (\emph{Nietzsche} -- Philosopher, psychologist,
+  Walter Kaufmann (\emph{Nietz\-sche} -- Philosopher, psychologist,
   antichrist. Princeton: Princeton University Press, 1974),
   citação da peça \emph{Aureng-zebe}, de John Dryden, incluída no
   \emph{Diálogo sobre a religião natural} de Hume. No original consta
@@ -358,7 +358,7 @@ Nada que vive\\
 a Terra merece.\\
 Dor e tédio é nosso ser, e o mundo\\
 é um lodo -- e nada mais.\\
-Assossega-te.\footnote{Nietzsche cita um trecho do poema ``A se
+Assossega-te.\footnote{Nietz\-sche cita um trecho do poema ``A se
   stesso'' (Para si mesmo).}
 \end{verse}
 \end{quote}
@@ -640,12 +640,12 @@ de séculos obscuros e confusos, a alma de seu povo como a sua própria
 alma; um sentimento transpassa e daí surge uma nostalgia, um farejar de
 rastros apagados, uma leitura correta de um passado rasurado, um
 entendimento ágil do palimpsesto, até mesmo do \emph{polipsesto}\footnote{Neologismo
-  de Nietzsche, em analogia a ``palimpsesto''. Depreende-se que o
+  de Nietz\-sche, em analogia a ``palimpsesto''. Depreende-se que o
   sentido seja o de um pergaminho cujo manuscrito foi apagado e
   reutilizado muitas vezes.} -- estes são seus talentos e virtudes. Com
 eles, Goethe quedou-se diante do monumento de Erwin von
 Steinbach\footnote{Arquiteto alemão que construiu a catedral de
-  Estrasburgo. Na passagem seguinte, Nietzsche faz alusão ao ensaio de
+  Estrasburgo. Na passagem seguinte, Nietz\-sche faz alusão ao ensaio de
   ``Von deutscher Baukunst'' (Sobre a arquitetura alemã), de Goethe.};
 na tempestade de seu sentimento rasgou o véu nebuloso que a história
 estendeu entre eles: ele viu, pela primeira vez, a obra alemã
@@ -758,7 +758,7 @@ força de vida e esquecimento quando viver e ser injusto são uma única
 coisa. Lutero pensou, certa feita, que o mundo só surgiu graças a um
 esquecimento de Deus, isto é, se Deus tivesse pensado nos ``armamentos
 pesados'', não teria criado o mundo\footnote{Segundo o tradutor francês,
-  Nietzsche faria referência aqui à seguinte passagem dos discursos
+  Nietz\-sche faria referência aqui à seguinte passagem dos discursos
   (\emph{Tischreden}) de Lutero: ``Se Adão pudesse ter visto os
   artefatos fabricados por seus filhos, ele teria morrido de desgosto''.}.
 Mas a mesma vida que precisa do esquecimento precisa, de vez em quando,
@@ -903,7 +903,7 @@ tornará uma primeira.
     conhecer borbotoam e podem ser colocadas, com apuro, nas caixas da
     memória. A cultura de um povo, como o oposto dessa barbárie, foi uma
     vez designada -- com algum direito, como penso -- como unidade do
-    estilo artístico em todas as expressões vitais de um povo\footnote{Nietzsche
+    estilo artístico em todas as expressões vitais de um povo\footnote{Nietz\-sche
       refere-se aqui a sua formulação de cultura presente na primeira
       extemporânea, \emph{David Strauss, o devoto e o escritor}.};\label{vitaisdeumpovo} essa
     designação não deve ser mal-entendida como se tratasse de uma
@@ -1079,7 +1079,7 @@ esse ``mesmo'' é o mais importante: pois, ao não entendê-lo, seu senso é
 mais infantil do que o da criança e mais ingênuo do que a
 ingenuidade\footnote{Ao traduzir \emph{Einfalt} (ingênuo) e
   \emph{Einfaltheit} (ingenuidade) perdemos em português a imagem que
-  Nietzsche fará em seguida com a palavra \emph{Falte} (dobra).} --
+  Nietz\-sche fará em seguida com a palavra \emph{Falte} (dobra).} --
 apesar das pequenas e hábeis dobras que realiza no pergaminho e no
 exercício virtuoso de seus dedos ao desembaraçar o embaraçado.
 Conclusão: ele destruiu e perdeu seu instinto; não pode mais confiar e
@@ -1167,7 +1167,7 @@ homens, só o seriam para Aquele ``que sonda os rins''\footnote{Ironia
 deuses, nem animais, e sim produtos de cultura histórica, inteiramente
 formação, imagem, forma sem conteúdo comprovável, infelizmente má forma,
 e além disso uniforme\footnote{Não foi possível manter aqui todo o jogo
-  que Nietzsche faz com os radicais \emph{Bild} e \emph{Form}: ``Für
+  que Nietz\-sche faz com os radicais \emph{Bild} e \emph{Form}: ``Für
   jeden Anderen sind sie etwas Anderes, nicht Menschen, nicht Götter,
   nicht Thiere, sondern historische \emph{Bild}ungsge\emph{bild}e, ganz
   und gar \emph{Bild}ung, \emph{Bild}, \emph{Form} ohne nachweisbaren
