Correções do autor Capítulo I

--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -143,7 +143,7 @@ isso aquele conhecimento de que a existência é apenas um ininterrupto
 ``ter sido'', uma coisa que vive de negar-se e consumir-se, de
 contradizer-se a si mesma.
 
-Se a ânsia por uma nova felicidade tiver o sentido de
+Se uma felicidade, se a ânsia por uma nova felicidade tiver o sentido de
 manter o vivente na vida e estimulá-lo a viver, então talvez nenhum
 filósofo tenha mais razão que o cínico: pois a felicidade do animal,
 como o cínico perfeito, é a prova viva da veracidade do cinismo. A menor
@@ -153,9 +153,9 @@ uma ideia súbita desvairada, surge entre o desprazer, o desejo e a
 carência. Tanto na maior como na menor felicidade, só uma coisa faz a
 felicidade ser felicidade: a capacidade de esquecer ou, expresso de
 forma erudita, a faculdade de sentir aistoricamente durante a
-felicidade. Quem não sabe alojar-se na iminência do instante,
-esquecendo-se de tudo que passou, quem não é capaz de manter-se em um
-ponto, como uma deusa Vitória, sem vertigem ou temor, nunca saberá o que
+felicidade. Quem não sabe alojar-se no umbral do instante,
+esquecendo-se de tudo que passou, quem não é capaz de manter-se em pé, 
+como uma deusa Vitória, sem vertigem ou temor, nunca saberá o que
 é a felicidade; e ainda pior: nunca fará algo que deixará outro feliz.
 Pensem num exemplo extremo de um homem que não possuísse a faculdade de
 esquecer, que fosse condenado a ver um devir em tudo: ele não acredita
@@ -206,7 +206,7 @@ vindouro, tudo depende -- seja para um indivíduo como para um povo -- de
 que haja uma linha que separe o visível e claro do obscuro e sombrio; de
 que se saiba tanto esquecer direito e no tempo certo, quanto lembrar no
 tempo certo; de que se perceba, com instinto forte, quando é necessário
-sentir historicamente ou aistoricamente. Essa consideração convida o
+sentir historicamente ou aistoricamente. Esta consideração convida o
 leitor à seguinte sentença: \emph{o histórico e o aistórico são
 igualmente necessários para a saúde de um indivíduo, de um povo e de uma
 cultura.}
@@ -268,7 +268,7 @@ ele esquece a maioria das coisas, ele é injusto com aquilo que repousa
 atrás dele e conhece apenas um direito, o direito daquilo que agora deve
 vir a ser. Assim, todo homem de ação ama seu ato infinitamente mais do
 que ele mereceria: e os melhores atos ocorrem em tal superabundância de
-amor, amor que eles, em todo caso, não devem merecer, mesmo se seu
+amor, amor que eles, em todo caso, não deveriam merecer, mesmo se seu
 valor fosse inestimavelmente alto.
 
 Se alguém pudesse estar em condições, em diversos casos, de inalar e
@@ -283,7 +283,7 @@ a história é útil ao menos para uma coisa: para que se saiba como também
 os maiores e superiores espíritos da espécie humana não sabem quão
 fortuitamente eles adquirem a forma pela qual veem e obrigam, à força,
 que todos vejam; à força, porque a intensidade de sua consciência é
-crescente. Quem não soube e não percebeu isso com clareza e em diversas
+excepcionalmente grande. Quem não soube e não percebeu isso com clareza e em diversas
 circunstâncias se submeterá ao surgimento de um espírito poderoso que
 imprima a maior paixão a uma forma dada''. Tal ponto de vista poderia
 ser chamado de supra-histórico, porque não se poderia perceber, naquele
